tests/typing/fail/nontuple-04.stderr
error: tuples don't exist: int * int is not a valid type...
 --> tests/typing/fail/nontuple-04.rs:8:23
  |
8 |         a : int = 3 + oui();
  |                       ^^^^^
